syntax = "proto3";
package helloworld;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply);
  
  rpc AddNumber (AddNumberRequest) returns (AddNumberResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

message AddNumberRequest {
  int64 x = 1;
  int64 y = 2;
}

message AddNumberResponse {
  string result = 1;
}